third_party/blink/renderer/core/layout/ng/ng_out_of_flow_layout_part.h
@@ -37,9 +37,13 @@ class CORE_EXPORT NGOutOfFlowLayoutPart {
                         const NGConstraintSpace& container_space,
                         const ComputedStyle& container_style);
 
-  // update_legacy will place NG OOF descendants into their Legacy container.
-  // It should be false if OOF descendants have already been placed into Legacy.
-  void Run(bool update_legacy = true);
+  // Normally this function lays out and positions all out-of-flow objects
+  // from the container_builder and additional ones it discovers through laying
+  // out those objects. However, if only_layout is specified, only that object
+  // will get laid out; any additional ones will be stored as out-of-flow
+  // descendants in the builder for use via
+  // LayoutResult::OutOfFlowPositionedDescendants.
+  void Run(LayoutObject* only_layout = nullptr);
 
  private:
   // Information needed to position descendant within a containing block.
